refactor: Simplify Main class and enhance event loading
- Refactored the Main class to streamline environment creation and orchestrator initialization.
- Removed the DataReader dependency from the Main class, centralizing event loading through the Orchestrator.
- Added methods to load events directly into the orchestrator, improving clarity and maintainability.
- Updated the Environment class to include serve records and enhance vehicle management.
- Removed the SimulationController class, integrating its functionality into the Main class for a more cohesive structure.